--- a/src/test/resources/application.yaml
+++ b/src/test/resources/application.yaml
@@ -15,24 +15,28 @@ spring:
     serialization:
       indent_output: true
   jpa:
-    database-platform: org.hibernate.dialect.SQLiteDialect
+    database-platform: org.sqlite.hibernate.dialect.SQLiteDialect
     show-sql: true
     properties:
       javax:
         persistence:
           query:
             timeout: 1111
+      hibernate:
+        #        hql:
+        #          bulk_id_strategy: org.hibernate.hql.spi.id.inline.InlineIdsInClauseBulkIdStrategy
+        format_sql: true
     hibernate:
-      ddl-auto: validate
+      ddl-auto: update
+
   messages:
     basename: i18n/messages
+
 server:
   error:
     include-message: always
     include-stacktrace: always
     include-exception: true
-    whitelabel:
-      enabled: false
 
 springdoc:
   api-docs:
@@ -42,9 +46,9 @@ springdoc:
 
 custom-properties:
   array-of-endpoint-urls:
+    - /api
     - /api/file_regex_predefined_categories
+    - /api/file_operations
     - /api/settings
+    - /api/string_operations
     - /api/tasks
-
-
-
