--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -9,8 +9,8 @@ spring:
     hikari:
       data-source-properties:
         foreign_keys: true
-      connection-init-sql: PRAGMA busy_timeout=1111; PRAGMA journal_mode=WAL;
-#      maximum-pool-size: 1
+      connection-init-sql: PRAGMA busy_timeout=2222; PRAGMA journal_mode=WAL;
+      maximum-pool-size: 1 # sqlite multi*threading issues with locking whole file and no busy_timeout worked...
   jackson:
     property-naming-strategy: SNAKE_CASE
     serialization:
@@ -34,6 +34,11 @@ spring:
   messages:
     basename: i18n/messages
 
+logging:
+  level:
+    spring:
+      filemanipulator.: DEBUG
+
 server:
   error:
     include-message: always
@@ -54,3 +59,4 @@ custom-properties:
     - /api/settings
     - /api/string_operations
     - /api/tasks
+    - /api/jobs
